--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@
             </nav>
             <address class="address">
                 <ul class="address-list">
-                    <li class="address-item"><a href="mailto:info@devstudio.com"
-                            class="address-link">info@devstudio.com</a></li>
-                    <li class="address-item"><a href="tel:+110001111111" class="address-link">+11 (000) 111-11-11</a>
-                    </li>
+                    <li class="address-item"><a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a></li>
+                    <li class="address-item"><a href="tel:+110001111111" class="address-link">+11 (000) 111-11-11</a></li>
                 </ul>
             </address>
         </div>
@@ -90,8 +88,7 @@
                     </div>
                     <div class="form-group checkbox-group">
                         <input type="checkbox" id="terms" required />
-                        <label for="terms">I accept the terms and conditions of the <a href="#">Privacy
-                                Policy</a></label>
+                        <label for="terms">I accept the terms and conditions of the <a href="#">Privacy Policy</a></label>
                     </div>
                     <button type="submit" class="modal-submit-button">Send</button>
                 </form>
@@ -260,10 +257,8 @@
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
                         <div class="image-container">
-                            <img src="./images/project1.jpg" alt="Banking App" width="360" height="300"
-                                aria-label="Banking App" />
-                            <p class="description-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            <img src="./images/project1.jpg" alt="Banking App" width="360" height="300" aria-label="Banking App" />
+                            <p class="description-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-text-container">
                             <h3 class="portfolio-project-title">Banking App</h3>
@@ -272,10 +267,8 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="image-container">
-                            <img src="./images/project2.jpg" alt="Cashless Payment" width="360" height="300"
-                                aria-label="Cashless Payment" />
-                            <p class="description-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            <img src="./images/project2.jpg" alt="Cashless Payment" width="360" height="300" aria-label="Cashless Payment" />
+                            <p class="description-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-text-container">
                             <h3 class="portfolio-project-title">Cashless Payment</h3>
@@ -284,10 +277,8 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="image-container">
-                            <img src="./images/project3.jpg" alt="Meditation App" width="360" height="300"
-                                aria-label="Meditation App" />
-                            <p class="description-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            <img src="./images/project3.jpg" alt="Meditation App" width="360" height="300" aria-label="Meditation App" />
+                            <p class="description-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-text-container">
                             <h3 class="portfolio-project-title">Meditation App</h3>
@@ -296,10 +287,8 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="image-container">
-                            <img src="./images/project4.jpg" alt="Taxi Service" width="360" height="300"
-                                aria-label="Taxi Service" />
-                            <p class="description-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            <img src="./images/project4.jpg" alt="Taxi Service" width="360" height="300" aria-label="Taxi Service" />
+                            <p class="description-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-text-container">
                             <h3 class="portfolio-project-title">Taxi Service</h3>
@@ -308,10 +297,8 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="image-container">
-                            <img src="./images/project5.jpg" alt="Screen Illustrations" width="360" height="300"
-                                aria-label="Screen Illustrations" />
-                            <p class="description-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            <img src="./images/project5.jpg" alt="Screen Illustrations" width="360" height="300" aria-label="Screen Illustrations" />
+                            <p class="description-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-text-container">
                             <h3 class="portfolio-project-title">Screen Illustrations</h3>
@@ -320,10 +307,8 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="image-container">
-                            <img src="./images/project6.jpg" alt="Online Courses" width="360" height="300"
-                                aria-label="Online Courses" />
-                            <p class="description-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            <img src="./images/project6.jpg" alt="Online Courses" width="360" height="300" aria-label="Online Courses" />
+                            <p class="description-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-text-container">
                             <h3 class="portfolio-project-title">Online Courses</h3>
@@ -339,8 +324,7 @@
         <div class="container">
             <div class="footer-content">
                 <a href="./index.html" class="footer-logo">Web<span class="footer-logo-color">Studio</span></a>
-                <p class="footer-description">Increase the flow of customers and sales for your business with digital
-                    marketing & growth solutions.</p>
+                <p class="footer-description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
             </div>
             <div class="footer-social">
                 <p class="footer-social-text">Social media</p>
