--- a/index.html
+++ b/index.html
@@ -45,7 +45,57 @@
                 <button class="hero-button" id="order-service-button">Order Service</button>
             </div>
         </section>
-
+        <!-- Modal Structure -->
+        <div class="backdrop is-hidden" id="backdrop">
+            <div class="modal">
+                <button class="close-button" id="close-button">
+                    <svg class="close-icon" width="24" height="24">
+                        <use href="./images/icons.svg#ellipse"></use>
+                        <use href="./images/icons.svg#vector"></use>
+                    </svg>
+                </button>
+                <h2 class="modal-title">Leave your contacts and we will call you back</h2>
+                <form class="modal-form">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <div class="input-wrapper">
+                            <svg class="icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-person"></use>
+                            </svg>
+                            <input type="text" id="name" placeholder=" " required />
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="phone">Phone</label>
+                        <div class="input-wrapper">
+                            <svg class="icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-phone"></use>
+                            </svg>
+                            <input type="tel" id="phone" placeholder=" " required />
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <div class="input-wrapper">
+                            <svg class="icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-email"></use>
+                            </svg>
+                            <input type="email" id="email" placeholder=" " required />
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="comment">Comment</label>
+                        <textarea id="comment" placeholder="Text input"></textarea>
+                    </div>
+                    <div class="form-group checkbox-group">
+                        <input type="checkbox" id="terms" required />
+                        <label for="terms">I accept the terms and conditions of the <a href="#">Privacy
+                                Policy</a></label>
+                    </div>
+                    <button type="submit" class="modal-submit-button" type="button">Send</button>
+                </form>
+            </div>
+        </div>
         <section class="team section">
             <div class="container">
                 <h2 class="section-title">Our Team</h2>
@@ -201,7 +251,6 @@
                 </ul>
             </div>
         </section>
-
         <section class="portfolio section">
             <div class="container">
                 <h2 class="portfolio-title">Our Portfolio</h2>
@@ -211,8 +260,7 @@
                             <img src="./images/project1.jpg" alt="Banking App" width="360" height="300"
                                 aria-label="Banking App" />
                             <p class="description-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                App ·
-                                Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-text-container">
                             <h3 class="portfolio-project-title">Banking App</h3>
@@ -224,8 +272,7 @@
                             <img src="./images/project2.jpg" alt="Cashless Payment" width="360" height="300"
                                 aria-label="Cashless Payment" />
                             <p class="description-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                App ·
-                                Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-text-container">
                             <h3 class="portfolio-project-title">Cashless Payment</h3>
@@ -237,8 +284,7 @@
                             <img src="./images/project3.jpg" alt="Meditation App" width="360" height="300"
                                 aria-label="Meditation App" />
                             <p class="description-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                App ·
-                                Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-text-container">
                             <h3 class="portfolio-project-title">Meditation App</h3>
@@ -250,8 +296,7 @@
                             <img src="./images/project4.jpg" alt="Taxi Service" width="360" height="300"
                                 aria-label="Taxi Service" />
                             <p class="description-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                App ·
-                                Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-text-container">
                             <h3 class="portfolio-project-title">Taxi Service</h3>
@@ -263,8 +308,7 @@
                             <img src="./images/project5.jpg" alt="Screen Illustrations" width="360" height="300"
                                 aria-label="Screen Illustrations" />
                             <p class="description-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                App ·
-                                Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-text-container">
                             <h3 class="portfolio-project-title">Screen Illustrations</h3>
@@ -276,8 +320,7 @@
                             <img src="./images/project6.jpg" alt="Online Courses" width="360" height="300"
                                 aria-label="Online Courses" />
                             <p class="description-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                App ·
-                                Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-text-container">
                             <h3 class="portfolio-project-title">Online Courses</h3>
@@ -287,9 +330,7 @@
                 </ul>
             </div>
         </section>
-
     </main>
-
     <footer class="footer section">
         <div class="container">
             <div class="footer-content">
@@ -339,76 +380,24 @@
             </div>
         </div>
     </footer>
-
-    <!-- Modal Structure -->
-    <div class="backdrop">
-        <div class="modal">
-            <button class="close-button">
-                <svg class="close-icon">
-                    <use href="./images/icons.svg#ellipse"></use>
-                    <use href="./images/icons.svg#vector"></use>
-                </svg>
-            </button>
-            <h2 class="modal-title">Leave your contacts and we will call you back</h2>
-            <form class="modal-form">
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <div class="input-wrapper">
-                        <svg class="icon">
-                            <use href="./images/icons.svg#icon-person"></use>
-                        </svg>
-                        <input type="text" id="name" placeholder=" " required />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="phone">Phone</label>
-                    <div class="input-wrapper">
-                        <svg class="icon">
-                            <use href="./images/icons.svg#icon-phone"></use>
-                        </svg>
-                        <input type="tel" id="phone" placeholder=" " required />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <div class="input-wrapper">
-                        <svg class="icon">
-                            <use href="./images/icons.svg#icon-email"></use>
-                        </svg>
-                        <input type="email" id="email" placeholder=" " required />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="comment">Comment</label>
-                    <textarea id="comment" placeholder="Text input"></textarea>
-                </div>
-                <div class="form-group checkbox-group">
-                    <input type="checkbox" id="terms" required />
-                    <label for="terms">I accept the terms and conditions of the <a href="#">Privacy Policy</a></label>
-                </div>
-                <button type="submit" class="modal-submit-button">Send</button>
-            </form>
-        </div>
-    </div>
-
     <!-- JavaScript for Modal -->
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const orderServiceButton = document.getElementById('order-service-button');
-            const backdrop = document.querySelector('.backdrop');
-            const closeButton = document.querySelector('.close-button');
+            const backdrop = document.getElementById('backdrop');
+            const closeButton = document.getElementById('close-button');
 
             orderServiceButton.addEventListener('click', function () {
-                backdrop.classList.add('is-open');
+                backdrop.classList.remove('is-hidden');
             });
 
             closeButton.addEventListener('click', function () {
-                backdrop.classList.remove('is-open');
+                backdrop.classList.add('is-hidden');
             });
 
             backdrop.addEventListener('click', function (event) {
                 if (event.target === backdrop) {
-                    backdrop.classList.remove('is-open');
+                    backdrop.classList.add('is-hidden');
                 }
             });
         });
