--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <!-- Modal Structure -->
         <div class="backdrop is-hidden" id="backdrop">
             <div class="modal">
-                <button class="close-button" id="close-button">
-                    <svg class="close-icon" width="24" height="24">
+                <button class="close-button" id="close-button" type="button">
+                    <svg class="close-icon">
                         <use href="./images/icons.svg#ellipse"></use>
                         <use href="./images/icons.svg#vector"></use>
                     </svg>
@@ -59,7 +59,7 @@
                     <div class="form-group">
                         <label for="name">Name</label>
                         <div class="input-wrapper">
-                            <svg class="icon" width="20" height="20">
+                            <svg class="icon">
                                 <use href="./images/icons.svg#icon-person"></use>
                             </svg>
                             <input type="text" id="name" placeholder=" " required />
@@ -68,7 +68,7 @@
                     <div class="form-group">
                         <label for="phone">Phone</label>
                         <div class="input-wrapper">
-                            <svg class="icon" width="20" height="20">
+                            <svg class="icon">
                                 <use href="./images/icons.svg#icon-phone"></use>
                             </svg>
                             <input type="tel" id="phone" placeholder=" " required />
@@ -77,7 +77,7 @@
                     <div class="form-group">
                         <label for="email">Email</label>
                         <div class="input-wrapper">
-                            <svg class="icon" width="20" height="20">
+                            <svg class="icon">
                                 <use href="./images/icons.svg#icon-email"></use>
                             </svg>
                             <input type="email" id="email" placeholder=" " required />
@@ -89,13 +89,13 @@
                     </div>
                     <div class="form-group checkbox-group">
                         <input type="checkbox" id="terms" required />
-                        <label for="terms">I accept the terms and conditions of the <a href="#">Privacy
-                                Policy</a></label>
+                        <label for="terms">I accept the terms and conditions of the <a href="#">Privacy Policy</a></label>
                     </div>
-                    <button type="submit" class="modal-submit-button" type="button">Send</button>
+                    <button type="submit" class="modal-submit-button">Send</button>
                 </form>
             </div>
         </div>
+
         <section class="team section">
             <div class="container">
                 <h2 class="section-title">Our Team</h2>
@@ -251,6 +251,7 @@
                 </ul>
             </div>
         </section>
+
         <section class="portfolio section">
             <div class="container">
                 <h2 class="portfolio-title">Our Portfolio</h2>
@@ -260,7 +261,8 @@
                             <img src="./images/project1.jpg" alt="Banking App" width="360" height="300"
                                 aria-label="Banking App" />
                             <p class="description-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                App ·
+                                Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-text-container">
                             <h3 class="portfolio-project-title">Banking App</h3>
@@ -272,7 +274,8 @@
                             <img src="./images/project2.jpg" alt="Cashless Payment" width="360" height="300"
                                 aria-label="Cashless Payment" />
                             <p class="description-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                App ·
+                                Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-text-container">
                             <h3 class="portfolio-project-title">Cashless Payment</h3>
@@ -284,7 +287,8 @@
                             <img src="./images/project3.jpg" alt="Meditation App" width="360" height="300"
                                 aria-label="Meditation App" />
                             <p class="description-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                App ·
+                                Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-text-container">
                             <h3 class="portfolio-project-title">Meditation App</h3>
@@ -296,7 +300,8 @@
                             <img src="./images/project4.jpg" alt="Taxi Service" width="360" height="300"
                                 aria-label="Taxi Service" />
                             <p class="description-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                App ·
+                                Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-text-container">
                             <h3 class="portfolio-project-title">Taxi Service</h3>
@@ -308,7 +313,8 @@
                             <img src="./images/project5.jpg" alt="Screen Illustrations" width="360" height="300"
                                 aria-label="Screen Illustrations" />
                             <p class="description-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                App ·
+                                Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-text-container">
                             <h3 class="portfolio-project-title">Screen Illustrations</h3>
@@ -320,7 +326,8 @@
                             <img src="./images/project6.jpg" alt="Online Courses" width="360" height="300"
                                 aria-label="Online Courses" />
                             <p class="description-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                App ·
+                                Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-text-container">
                             <h3 class="portfolio-project-title">Online Courses</h3>
@@ -330,7 +337,9 @@
                 </ul>
             </div>
         </section>
+
     </main>
+
     <footer class="footer section">
         <div class="container">
             <div class="footer-content">
@@ -380,6 +389,7 @@
             </div>
         </div>
     </footer>
+    
     <!-- JavaScript for Modal -->
     <script>
         document.addEventListener('DOMContentLoaded', function () {
@@ -402,6 +412,6 @@
             });
         });
     </script>
-</body>
-
-</html>
+    </body>
+    
+    </html>
