--- a/index.html
+++ b/index.html
@@ -333,12 +333,14 @@
             <div class="footer-subscribe">
                 <p>Subscribe</p>
                 <form class="subscribe-form">
-                    <input type="email" placeholder="E-mail" />
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" placeholder="E-mail" required />
                     <button type="submit" class="subscribe-button">Subscribe</button>
                 </form>
             </div>
         </div>
     </footer>
+
 
 
     <!-- Modal Structure -->
