--- a/index.html
+++ b/index.html
@@ -331,16 +331,14 @@
                 </ul>
             </div>
             <div class="footer-subscribe">
-                <p class="subscribe-title">Subscribe</p>
+                <p>Subscribe</p>
                 <form class="subscribe-form">
-                    <label for="email" class="subscribe-label">Email</label>
-                    <input type="email" id="email" name="email" class="subscribe-input" placeholder="E-mail" required />
+                    <input type="email" placeholder="E-mail" />
                     <button type="submit" class="subscribe-button">Subscribe</button>
                 </form>
             </div>
         </div>
     </footer>
-
 
 
     <!-- Modal Structure -->
