--- a/index.html
+++ b/index.html
@@ -331,11 +331,10 @@
                 </ul>
             </div>
             <div class="footer-subscribe">
-               <p class="subscribe-title">Subscribe</p>
-               <form class="subscribe-form">
-                   <label for="email" class="subscribe-label">Subscribe</label>
-                   <input type="email" id="email" name="email" class="subscribe-input" placeholder="E-mail" required />
-                   <button type="submit" class="subscribe-button">Subscribe</button>
+                <p>Subscribe</p>
+                <form class="subscribe-form">
+                    <input type="email" placeholder="E-mail" />
+                    <button type="submit" class="subscribe-button">Subscribe</button>
                 </form>
             </div>
         </div>
