--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
     <!-- Modal Structure -->
     <div class="backdrop">
         <div class="modal">
-            <button class="close-button">
+            <button class="close-button" type="button">
                 <svg class="close-icon" width="8" height="8">
                     <use href="./images/icons.svg#icon-close"></use>
                 </svg>
