--- a/index.html
+++ b/index.html
@@ -360,16 +360,17 @@
                 <div class="form-group">
                     <label for="name">Name</label>
                     <div class="input-wrapper"> 
-                        <input type="text" id="name" name="name" required>
+                        <input type="text" id="name" name="name" class="form-input" placeholder="Name" required>
                         <svg class="icon" width="16" height="16"> 
                             <use href="./images/icons.svg#icon-person"></use>
+                            
                         </svg>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="phone">Phone</label>
                     <div class="input-wrapper"> 
-                        <input type="tel" id="phone" name="phone" required>
+                        <input type="tel" id="phone" name="phone" class="form-input" placeholder="Phone" required>
                         <svg class="icon" width="16" height="16"> 
                             <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
@@ -378,7 +379,7 @@
                 <div class="form-group">
                     <label for="email">Email</label>
                     <div class="input-wrapper"> 
-                        <input type="email" id="email" name="email" required>
+                        <input type="email" id="email" name="email" class="form-input" placeholder="E-mail" required>
                         <svg class="icon" width="16" height="16"> 
                             <use href="./images/icons.svg#icon-email"></use>
                         </svg>
@@ -387,7 +388,7 @@
                 <div class="form-group">
                     <label for="comment">Comment</label>
                     <div class="input-wrapper"> 
-                        <textarea id="comment" name="comment" required></textarea>
+                        <textarea id="comment" name="comment" class="form-input" placeholder="Comment" required></textarea>
                     </div>
                 </div>
                 <div class="form-group checkbox-group">
