--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                     <label for="name">Name</label>
                     <div class="input-wrapper"> 
                         <input type="text" id="name" name="name" class="form-input" placeholder="Name" required>
-                        <svg class="icon" width="16" height="16"> 
+                        <svg class="icon" width="18" height="24"> 
                             <use href="./images/icons.svg#icon-person"></use>
                             
                         </svg>
@@ -371,7 +371,7 @@
                     <label for="phone">Phone</label>
                     <div class="input-wrapper"> 
                         <input type="tel" id="phone" name="phone" class="form-input" placeholder="Phone" required>
-                        <svg class="icon" width="16" height="16"> 
+                        <svg class="icon" width="18" height="24"> 
                             <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
                     </div>
@@ -380,19 +380,19 @@
                     <label for="email">Email</label>
                     <div class="input-wrapper"> 
                         <input type="email" id="email" name="email" class="form-input" placeholder="E-mail" required>
-                        <svg class="icon" width="16" height="16"> 
+                        <svg class="icon" width="18" height="24"> 
                             <use href="./images/icons.svg#icon-email"></use>
                         </svg>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="comment">Comment</label>
+                    <label for="user-comment">Comment</label>
                     <div class="input-wrapper"> 
-                        <textarea id="comment" name="comment" class="form-input" placeholder="Comment" required></textarea>
+                        <textarea id="user-comment" name="user-comment" class="form-input" placeholder="Comment" required></textarea>
                     </div>
                 </div>
                 <div class="form-group checkbox-group">
-                    <input type="checkbox" id="terms" name="terms" required>
+                    <input type="checkbox" id="user-privacy" name="terms" required>
                     <label for="terms">I accept the terms and conditions of the <a href="#">Privacy Policy</a></label>
                 </div>
                 <button type="submit" class="modal-submit-button">Send</button>
