--- a/index.html
+++ b/index.html
@@ -358,9 +358,9 @@
             <h2 class="modal-title">Leave your contacts and we will call you back</h2>
             <form class="modal-form">
                 <div class="form-group">
-                    <label for="name">Name</label>
+                    <label for="user-name">Name</label>
                     <div class="input-wrapper"> 
-                        <input type="text" id="name" name="name" class="form-input" placeholder="Name" required>
+                        <input type="text" id="user-name" name="user-name" class="form-input" placeholder="Name" required>
                         <svg class="icon" width="18" height="24"> 
                             <use href="./images/icons.svg#icon-person"></use>
                             
