--- a/index.html
+++ b/index.html
@@ -388,11 +388,11 @@
                 <div class="form-group">
                     <label for="user-comment">Comment</label>
                       <div class="input-wrapper"> 
-                        <textarea id="user-comment" name="user-comment" class="form-input" placeholder="Comment" required></textarea>
+                        <textarea id="user-comment" name="user-comment" class="form-input" placeholder="Text input" required></textarea>
                     </div>
                 </div>
                 <div class="form-group checkbox-group">
-                    <input type="checkbox" id="user-privacy" name="terms" required>
+                    <input type="checkbox" id="user-comment" name="user-comment" required>
                     <label for="terms">I accept the terms and conditions of the <a href="#">Privacy Policy</a></label>
                 </div>
                 <button type="submit" class="modal-submit-button">Send</button>
