--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                     <use href="./images/icons.svg#icon-close"></use>
                 </svg>
             </button>
-            <h2 class="modal-title">Leave your contacts and we will call you back</h2>
+            <p class="modal-title">Leave your contacts and we will call you back</p>
             <form class="modal-form">
                 <div class="form-group">
                     <label for="user-name">Name</label>
