--- a/index.html
+++ b/index.html
@@ -389,10 +389,17 @@
                 </div>
                 <div class="form-group">
                     <label for="user-comment">Comment</label>
-                    <div class="input-wrapper">
-                        <textarea id="user-comment" name="user-comment" class="form-input" placeholder="Text input"
-                            required></textarea>
-                    </div>
+                    <textarea id="user-comment" name="user-comment" class="textarea-input" placeholder="Text input" required></textarea>
+                </div>
+                <div class="form-group checkbox-group">
+                    <input type="checkbox" id="terms" name="terms" required>
+                    <label for="terms">I accept the terms and conditions of the <a href="#">Privacy Policy</a></label>
+                </div>
+                <button type="submit" class="modal-submit-button">Send</button>
+                </form>
+            </div> 
+        </div>
+                    
                 </div>
                 <div class="form-group checkbox-group">
                     <input type="checkbox" id="user-comment" name="user-comment" required>
