--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                         required></textarea>
                 </div>
                 <div class="form-group checkbox-group">
-                    <input type="checkbox" id="terms" name="terms" required>
+                    <input type="checkbox" id="user-privacy" name="user-privacy" required>
                     <label for="terms">I accept the terms and conditions of the <a href="#">Privacy Policy</a></label>
                 </div>
                 <button type="submit" class="modal-submit-button">Send</button>
