--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                 <div class="form-group">
                     <label for="email">Email</label>
                     <div class="input-wrapper">
-                        <input type="email" id="email" name="email" class="form-input" placeholder="E-mail" required>
+                        <input type="e-mail" id="e-mail" name="e-mail" class="form-input" placeholder="E-mail" required>
                         <svg class="icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-email"></use>
                         </svg>
@@ -391,8 +391,8 @@
                         required></textarea>
                 </div>
                 <div class="form-group checkbox-group">
-                    <input type="checkbox" id="user-privacy" name="user-privacy" required>
-                    <label for="terms">I accept the terms and conditions of the <a href="#">Privacy Policy</a></label>
+                    <input type="checkbox" value="true" id="user-privacy" name="user-privacy" required>
+                    <label for="user-privacy">I accept the terms and conditions of the <a href="#">Privacy Policy</a></label>
                 </div>
                 <button type="submit" class="modal-submit-button">Send</button>
             </form>
