--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                 <form class="subscribe-form">
                     <label for="email" class="subscribe-label">Email</label>
                     <input type="email" id="email" name="email" class="subscribe-input" placeholder="E-mail" required>
-                    <button type="submit" class="subscribe-button">
+                    <button type="button" class="subscribe-button">
                         Subscribe
                         <svg class="subscribe-icon" width="16" height="16">
                             <use href="./images/icons.svg#send"></use>
