--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             <div class="footer-subscribe">
                 <p class="subscribe-title">Subscribe</p>
                 <form class="subscribe-form">
-                    <label for="email" class="subscribe-label">Email</label>
+                    <label for="email" class="subscribe-label"></label>
                     <input type="email" id="email" name="email" class="subscribe-input" placeholder="E-mail" required>
                     <button type="submit" class="subscribe-button">
                         Subscribe
