--- a/index.html
+++ b/index.html
@@ -333,18 +333,20 @@
             <div class="footer-subscribe">
                 <p class="subscribe-title">Subscribe</p>
                 <form class="subscribe-form">
-                    <label for="email" class="subscribe-label"></label>
+                    <label for="email" class="subscribe-label visually-hidden">Email</label>
                     <input type="email" id="email" name="email" class="subscribe-input" placeholder="E-mail" required>
                     <button type="submit" class="subscribe-button">
                         Subscribe
                         <svg class="subscribe-icon" width="16" height="16">
-                            <use href="./images/icons.svg#send"></use>
+                            <use href="./images/icons.svg#icon-send"></use>
                         </svg>
                     </button>
                 </form>
             </div>
         </div>
     </footer>
+
+
 
 
 
