--- a/index.html
+++ b/index.html
@@ -291,61 +291,59 @@
     </main>
 
     <footer class="footer section">
-        <div class="container">
-            <div class="footer-content">
-                <a href="./index.html" class="footer-logo">Web<span class="footer-logo-color">Studio</span></a>
-                <p class="footer-description">Increase the flow of customers and sales for your business with digital
-                    marketing & growth solutions.</p>
-            </div>
-            <div class="footer-social">
-                <p class="footer-social-text">Social media</p>
-                <ul class="social-icons-footer">
-                    <li class="social-icon-item-footer">
-                        <a href="https://instagram.com" class="social-icon-footer">
-                            <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-icon-item-footer">
-                        <a href="https://twitter.com" class="social-icon-footer">
-                            <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg#icon-twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-icon-item-footer">
-                        <a href="https://facebook.com" class="social-icon-footer">
-                            <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg#icon-facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-icon-item-footer">
-                        <a href="https://linkedin.com" class="social-icon-footer">
-                            <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg#icon-linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="footer-subscribe">
-                <p class="subscribe-title">Subscribe</p>
-                <form class="subscribe-form">
-                    <label for="email" class="subscribe-label visually-hidden">Email</label>
-                    <input type="email" id="email" name="email" class="subscribe-input" placeholder="E-mail" required>
-                    <button type="submit" class="subscribe-button">
-                        Subscribe
-                        <svg class="subscribe-icon" width="16" height="16">
-                            <use href="./images/icons.svg#icon-send"></use>
-                        </svg>
-                    </button>
-                </form>
-            </div>
+    <div class="container">
+        <div class="footer-content">
+            <a href="./index.html" class="footer-logo">Web<span class="footer-logo-color">Studio</span></a>
+            <p class="footer-description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
-    </footer>
-
+        <div class="footer-social">
+            <p class="footer-social-text">Social media</p>
+            <ul class="social-icons-footer">
+                <li class="social-icon-item-footer">
+                    <a href="https://instagram.com" class="social-icon-footer">
+                        <svg class="icon-footer" width="24" height="24">
+                            <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-icon-item-footer">
+                    <a href="https://twitter.com" class="social-icon-footer">
+                        <svg class="icon-footer" width="24" height="24">
+                            <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-icon-item-footer">
+                    <a href="https://facebook.com" class="social-icon-footer">
+                        <svg class="icon-footer" width="24" height="24">
+                            <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-icon-item-footer">
+                    <a href="https://linkedin.com" class="social-icon-footer">
+                        <svg class="icon-footer" width="24" height="24">
+                            <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="footer-subscribe">
+            <p class="subscribe-title">Subscribe</p>
+            <form class="subscribe-form">
+                <label for="email" class="subscribe-label visually-hidden">E-mail</label>
+                <input type="email" id="email" name="email" class="subscribe-input" placeholder="E-mail" required>
+                <button type="submit" class="subscribe-button" type="submit">
+                    Subscribe
+                    <svg class="subscribe-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-send"></use>
+                    </svg>
+                </button>
+            </form>
+        </div>
+    </div>
+</footer>
 
 
 
@@ -355,7 +353,7 @@
         <div class="modal">
             <button class="close-button" type="button">
                 <svg class="close-icon" width="8" height="8">
-                    <use href="./images/icons.svg#icon-close"></use>
+                    <use href="./images/icons.svg#icon-vector"></use>
                 </svg>
             </button>
             <p class="modal-title">Leave your contacts and we will call you back</p>
@@ -394,7 +392,7 @@
                         required></textarea>
                 </div>
                 <div class="form-group checkbox-group">
-                    <input type="checkbox" value="true" id="user-privacy" name="user-privacy" required>
+                    <input type="checkbox visually-hidden" id="user-privacy" name="user-privacy" required>
                     <label for="user-privacy">I accept the terms and conditions of the <a href="#">Privacy Policy</a></label>
                 </div>
                 <button type="submit" class="modal-submit-button">Send</button>
