--- a/index.html
+++ b/index.html
@@ -332,18 +332,19 @@
         <div class="footer-subscribe">
             <p class="subscribe-title">Subscribe</p>
             <form class="subscribe-form">
-                <label for="email" class="subscribe-label visually-hidden">E-mail</label>
-                <input type="email" id="email" name="email" class="subscribe-input" placeholder="E-mail" required>
-                <button type="submit" class="subscribe-button" type="submit">
+                <label>
+                    <input type="email" class="subscribe-input" placeholder="E-mail" required>
+                </label>
+                <button type="submit" class="subscribe-button">
                     Subscribe
-                    <svg class="subscribe-icon" width="16" height="16">
+                    <svg class="subscribe-icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-send"></use>
                     </svg>
                 </button>
             </form>
         </div>
-    </div>
-</footer>
+        </div>
+        </footer>
 
 
 
@@ -401,7 +402,7 @@
     </div>
 
     <!-- JavaScript for Modal -->
-    <script>
+   <script>
         document.addEventListener('DOMContentLoaded', function () {
             const orderServiceButton = document.getElementById('order-service-button');
             const backdrop = document.querySelector('.backdrop');
@@ -423,5 +424,4 @@
         });
     </script>
 </body>
-
 </html>
