--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             <p class="subscribe-title">Subscribe</p>
             <form class="subscribe-form">
                 <label>
-                    <input type="email" class="subscribe-input" placeholder="E-mail" required>
+                    <input type="email" name="email" class="subscribe-input" placeholder="E-mail" required>
                 </label>
                 <button type="submit" class="subscribe-button">
                     Subscribe
