--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
         <div class="footer-subscribe">
             <p class="subscribe-title">Subscribe</p>
             <form class="subscribe-form">
-                <label>
+                <label class="subscribe-label">
                     <input type="email" name="email" class="subscribe-input" placeholder="E-mail" required>
                 </label>
                 <button type="submit" class="subscribe-button">
