--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                         required></textarea>
                 </div>
                 <div class="form-group checkbox-group">
-                    <input type="checkbox visually-hidden" id="user-privacy" name="user-privacy" required>
+                    <input type="checkbox" value="true" id="user-privacy" name="user-privacy" required>
                     <label for="user-privacy">I accept the terms and conditions of the <a href="#">Privacy Policy</a></label>
                 </div>
                 <button type="submit" class="modal-submit-button">Send</button>
