--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                 <div class="form-group">
                     <label class="modal-label" for="email">Email</label>
                     <div class="input-wrapper">
-                        <input type="e-mail" id="e-mail" name="e-mail" class="form-input" placeholder="E-mail" required>
+                        <input type="email" id="email" name="email" class="form-input" placeholder="E-mail" required>
                         <svg class="icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-email"></use>
                         </svg>
