--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                         required>
                     <span class="checkbox-icon">
                         <svg class="icon-vector" width="10" height="8">
-                            <use href="./images/icons.svg#icon-vector"></use>
+                            <use href="./images/icons.svg#checkbox"></use>
                         </svg>
                     </span>
                     <label for="user-privacy" class="label-text">
