--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                             <svg class="icon-vector" width="10" height="8">
                                 <use href="./images/icons.svg#icon-checkbox"></use>
                             </svg>
-                        </span>I accept the terms and conditions of the <a href="#">Privacy Policy</a>
+                        </span>I accept the terms and conditions of the <a href="#" class="checkbox-link">Privacy Policy</a>
                     </label>
                 </div>
                 <button type="submit" class="modal-submit-button">Send</button>
